# eml-reader

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/eml_reader/: cli.py  eml_processor.py  html.py  main.py  resource.py  server.py  thread_analyzer.py
